# intern_task

./: .gitignore  README.md  pyproject.toml  pytest.ini  requiremenets.txt
accounts/: managers.py  models.py  serializers.py  test_views.py  urls.py  views.py
config/: settings.py  urls.py
